hphp/test/zend/good/ext/standard/tests/math/decbin_error.php.skipif
<?php
<<__EntryPoint>> function main() {
function_exists('expm1') or die('skip expm1() is not supported in this build.');
}
