hphp/test/zend/bad/ext/standard/tests/network/shutdown.php.skipif
<?php
	function_exists('stream_socket_shutdown') or die('skip stream_socket_shutdown() is not supported.');
?>